styles.css
* {
  margin: 0;
  padding: 0;
}
html {
  font-size: 62.5%;
}

/* header */

.header__search {
  display: none;
}

header .dropdown {
  display: none;
}

.header__banner {
  text-align: center;
  margin: 2rem;
}
.navbar {
  border-top: 1px solid grey;
  border-bottom: 1px solid grey;
  margin-left: 4rem;
  margin-right: 2rem;
}
.nav-link {
  font-size: 2rem;
  margin-right: 30rem;
  color: black;
  font-weight: 300;
}

.nav-item {
  font-family: "Open Sans", sans-serif;
  font-weight: 700;
}

.d-flex {
  position: relative;
  font-size: 4rem;
}
.d-flex img {
  position: absolute;
  right: 1rem;
  top: 1.25rem;
}
#navBarSearchForm {
  width: 30rem;
  height: 4rem;
  margin: 1rem 0;
}

/* main */

main .btn-group {
  display: none;
}

.main__search--two {
  display: none;
  width: 95%;
  height: 8rem;
  margin: auto;
}

.main__search--two .form-control {
  width: 100%;
  height: 100%;
  border: 1px solid rgba(128, 128, 128, 0.4);
  border-radius: 0;
  font-size: 4rem;
  font-weight: 300;
  padding: 2rem;
}

.main__banner {
  display: flex;
  gap: 1rem;
  position: relative;
  margin-top: 4rem;
  margin-left: 3rem;
}

.main__banner__left {
  background-image: url(./assets/left-banner.png);
  background-repeat: no-repeat;
  background-size: 100% 100%;
  height: 50vh;
  width: 60%;
  margin-left: 1rem;
}
.main__banner__left--text {
  font-family: "Open Sans", sans-serif;
  font-weight: 300;
  position: absolute;
  left: 4%;
  top: 40%;
}

.main__banner__left--text1 {
  font-size: 2rem;
  color: #894b02;
}

.main__banner__left--text2 {
  font-size: 8rem;
}

.main__banner__right {
  width: 40%;
  margin-right: 2rem;
  border: 2px solid #894b02;
  height: 50vh;
}

.main__banner__right--head {
  background-color: #894b02;
  color: white;
  font-size: 2rem;
  padding-left: 2rem;
}

.main__banner__right ul {
  list-style: none;
  font-size: 2rem;
  padding-inline-start: 0;
}

.main__banner__right li {
  border-bottom: 1px solid #3a3939;
  padding: 1rem;
}

.main__banner__right li:nth-child(1) {
  padding-top: 4rem;
}
.main__banner__right li:nth-child(7) {
  border: none;
}

.follow {
  position: absolute;
  width: 10vw;
  height: 200px;
  background-color: silver;
  right: 0;
  top: 80%;
  padding: 2rem;
  box-shadow: 1px 3px 2px 0px rgba(0, 0, 0, 0.75);
}

.follow__head {
  text-align: center;
  font-size: 2.1rem;
}
.follow__icons {
  display: flex;
  flex-wrap: wrap;
}
.follow img {
  margin: 1rem;
}

/* sales */

.sales__head {
  font-size: 2rem;
  margin: 4rem;
}

.sales__head:after {
  content: "";
  display: block;
  width: 8.3%;
  margin-top: -1px;
  border-bottom: 2.5px solid #c57901;
}
.sales__head hr {
  margin: 0;
  margin-right: 15rem;
}

.sales__card {
  display: flex;
  justify-content: space-between;
}

.sales__card__item:nth-child(1) {
  margin-left: 3rem;
}

.sales__card__item:nth-child(4) {
  margin-right: 2rem;
}

.sales__card__item img {
  width: 380px;
}

.sales__card__item--img {
  position: relative;
}

.sales__card__item--details {
  position: absolute;
  background-color: rgba(190, 127, 86, 0.9);
  bottom: 0;
  color: white;
  font-size: 2.4rem;
  padding: 2.8rem;
  display: flex;
  justify-content: space-between;
  width: 100%;
}

/* details */

.details__head {
  font-size: 5rem;
  text-align: center;
  margin-top: 10rem;
  margin-bottom: 2rem;
}
.details__body {
  font-size: 2rem;
  text-align: center;
  margin-left: 2rem;
  margin-right: 2rem;
  margin-bottom: 10rem;
  line-height: 2.5;
}

/* footer */

footer {
  background-color: #894b02;
  display: flex;
  justify-content: space-between;
  color: white;
  font-size: 1.5rem;
}
.quickLinks__head,
.newsLetter__head {
  margin: 3rem;
}
.quickLinks ul {
  list-style: none;
}

.quickLinks li {
  margin: 2rem;
  margin-left: 1rem;
}

.newsLetter input {
  margin-left: 3rem;
  padding: 0.3rem;
}

.newsLetter button {
  border-style: none;
  margin-left: 3rem;
  margin-top: 1rem;
  padding: 0.2rem;
  text-align: center;
  width: 50%;
  background-color: #c57901;
  color: white;
}

.contactInfo__head {
  margin-top: 3rem;
  margin-bottom: 1.5rem;
}

.contactInfo ul {
  list-style: none;
  padding-inline-start: 0%;
  display: flex;
  flex-direction: column;
}

.contactInfo li {
  margin-bottom: 3rem;
  padding-inline-start: 0%;
  margin-right: 2rem;
  display: flex;
}

.contactInfo__logo {
  margin-right: 2rem;
}

.copyright {
  background-color: black;
  color: white;
  padding: 0.6rem;
  font-size: 1.5rem;
  text-align: center;
}

/* media query */

/* tab view */

@media only screen and (min-width: 768px) and (max-width: 1024px) {
  html {
    font-size: 40%;
  }

  .nav-link {
    margin-right: 10rem;
  }

  .d-flex img {
    width: 3rem;
    top: 1.28rem;
  }

  .main__banner__left {
    height: 40vh;
  }

  .main__banner__right {
    height: 40vh;
  }
  .follow {
    top: 76%;
    width: 20vw;
    height: 170px;
  }

  .follow__head {
    font-size: 3rem;
  }

  .sales__head:after {
    width: 13%;
  }

  .sales hr {
    margin-right: 21rem;
  }
  .sales__card img {
    width: 90%;
  }

  .sales__card__item--details {
    width: 90%;
  }
}

/* mobile view */

@media only screen and (max-width: 600px) {
  html {
    font-size: 30%;
  }

  /* head */

  .navbar {
    display: none;
  }

  .header__search {
    display: block;
    position: absolute;
    top: 5.4%;
    right: 5%;
  }

  .header__banner {
    border-bottom: 1px solid silver;
    margin-left: 3rem;
    margin-right: 3rem;
    text-align: left;
  }

  .header__banner--logo {
    height: 8rem;
  }

  header .dropdown-toggle::after {
    margin-left: 33.255em;
  }

  header .dropdown {
    display: block;
    background-color: rgb(0, 0, 0);
    padding: 2rem;
    width: 100vw;
    margin-right: 0%;
    margin-bottom: 2rem;
  }

  header .btn {
    width: 95vw;
  }

  header .dropdown img {
    width: 3rem;
    position: absolute;
    right: 7%;
  }

  header .dropdown-menu {
    width: 98.6%;
    font-size: 4rem;
    text-align: center;
    background-color: #c57901;
  }

  header .dropdown-item {
    color: white;
    margin-bottom: 4rem;
  }

  header .dropdown-item:active {
    background-color: white;
    color: #c57901;
  }

  /* main */

  main .dropdown-toggle::after {
    margin-left: 8.255em;
  }

  main .btn-group {
    display: block;
    color: white;
  }

  main .btn-group button {
    width: 92%;
    background-color: #894b02;
    color: white;
    height: 4vh;
    font-size: 2rem;
    margin-left: 3rem;
    margin-right: 2rem;
    text-align: left;
    margin-top: 1rem;
  }

  main button.dropdown-toggle {
    font-size: 4rem;
    height: 40px;
  }

  .main__banner {
    display: block;
    width: 90vw;
  }
  .main__banner__left {
    width: 90vw;
    height: 20vh;
  }

  .main__banner__left--text {
    top: 20%;
  }

  .main__banner__right {
    display: none;
  }
  .follow {
    top: 200%;
    height: 250px;
    width: 18vw;
    padding: 1rem;
    right: -5.2%;
  }

  .follow__head {
    font-size: 2rem;
  }

  .follow__icons {
    flex-direction: column;
    justify-content: space-between;
    align-items: center;
  }
  .follow__icons--img {
    width: 70%;
  }

  .follow img {
    width: 100%;
    padding: 1rem;
  }

  /* sales */

  .sales__head {
    font-size: 4rem;
  }

  .sales__head:after {
    width: 43%;
  }
  .sales__head hr {
    margin-right: 0rem;
  }

  .sales__card {
    flex-direction: column;
    align-items: center;
    gap: 8rem;
  }
  .sales__card__item img {
    width: 100%;
  }

  .sales__card__item--details {
    font-size: 4rem;
    padding: 3rem;
  }

  /* details */

  .details__head {
    margin-bottom: 10rem;
  }

  .details__body {
    line-height: 3;
    font-size: 3rem;
    margin-bottom: 20rem;
  }

  /* footer */

  footer {
    flex-direction: column;
    font-size: 2.8rem;
    font-family: "Open Sans", sans-serif;
  }

  .quickLinks__head,
  .newsLetter__head,
  .contactInfo__head {
    font-size: 3rem;
  }

  .quickLinks__head,
  .newsLetter__head {
    margin-bottom: 1rem;
  }

  .quickLinks ul {
    display: flex;
  }
  .contactInfo {
    margin-left: 3rem;
  }

  .newsLetter button {
    border: none;
    text-align: left;
    padding-left: 2rem;
    width: 25%;
  }
}

